2001-05-28  Clint Adams  <schizo@debian.org>

	* 14517: Src/Builtins/rlimits.awk: fix glibc2.2.3
	handling.

	* 14513: Completion/Debian/Command/.distfiles,
	Completion/Debian/Command/_update_alternatives:
	completion for update-alternatives

	* 14512: Completion/Debian/Command/_dpkg: tweak --compare-versions
	behavior.

2001-05-28  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Src/Modules/zprof.c: Silence bogus compiler warnings
	about variables used when unitialized.

	* Andrej: 14501 (as tweaked by 14510): Fix device and FIFO tests
	for Cygwin and other platforms where they're not implemented or
	the testing user has insufficient permissions.

2001-05-28  Clint Adams  <clint@zsh.org>

	* 14509: Completion/Base/Core/_setup, Doc/Zsh/compsys.yo,
	Doc/Zsh/mod_complist.yo: clobber both ZLS_COLORS and ZLS_COLOURS
	during compinit, and slightly clarify this behavior in the
	documentation.

2001-05-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 14507: Src/Zle/compresult.c: fix for cursor positioning with
	that -y option of compctl (display strings)

	* 14504: Src/Modules/zprof.c: make the zprof wrapper function
	be more careful, avoiding almost all of the code when the
	module is being unloaded

	* 14503: Src/exec.c: another attempt at fixing the job problem
	from 14327; make execpline() reset list_pipe_job to zero if it
	would be set for a job started in the background

2001-05-27  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Etc/MACHINES: Mention failure of gcc 2.7.1 on HPUX,
	and need for --disable-lfs on Solaris 2.6.

2001-05-27  Clint Adams  <clint@zsh.org>

  	* 14492: Functions/Prompts/.distfiles,
	Functions/Prompts/prompt_clint_setup:
	additional prompt theme.

2001-05-26  Wayne Davison  <wayned@users.sourceforge.net>

	* 14488: Src/Zle/zle_hist.c: fixed accept-and-infer-next-history
	when called repeatedly.  Also made the infer actions and
	accept-line-and-down-history not get tripped up by transitory
	changes to the history data.
